# Telegraphs

./: .gitignore  Makefile  Telegram.hs  Telegraphs.cabal
Telegram/: Audio.hs  Contact.hs  Document.hs  GroupChat.hs  Location.hs  Message.hs  PhotoSize.hs  Sticker.hs  Update.hs  User.hs  Video.hs
example/: Main.hs  Network
src/Network/: Telegraphs.hs
src/Network/Telegraphs/: Audio.hs  Chat.hs  Contact.hs  Document.hs  GroupChat.hs  Location.hs  Message.hs  PhotoSize.hs  Sticker.hs  Update.hs  User.hs  Video.hs  Voice.hs
