name:                Telegraphs
version:             0.1.0.0
synopsis:            Telegram Bot API library for Haskell
description:         Please see README.md
homepage:            http://github.com/rein/Telegraphs#readme
license:             MIT
license-file:        LICENSE
author:              "Lain"
maintainer:          lain@lain.org.uk
copyright:           2015 Lain <lain@lain.org.uk>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Telegraphs
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , aeson
                     , bytestring
                       
  default-language:    Haskell2010

-- executable Telegraphs-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , Telegraphs
--  default-language:    Haskell2010

test-suite Telegraphs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Telegraphs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rein/Telegraphs
